--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /SegundoObligatorio/nbproject/private/
 /SegundoObligatorio/build/
 /SegundoObligatorio/dist/
+/Practico_ejercicio8/nbproject/private/
+/Practico_ejercicio8/build/
+/Practico_ejercicio8/dist/
