--- a/SegundoObligatorio/nbproject/project.properties
+++ b/SegundoObligatorio/nbproject/project.properties
@@ -96,5 +96,6 @@ run.test.classpath=\
 run.test.modulepath=\
     ${javac.test.modulepath}
 source.encoding=UTF-8
+source.reference.jcommon-1.0.23.jar=jfreechart-1.0.19/lib/jcommon-1.0.23.jar
 src.dir=src
 test.src.dir=test
